further init and establishing client status in docker

--- a/card-api/src/main/resources/application-prod.properties
+++ b/card-api/src/main/resources/application-prod.properties
@@ -10,3 +10,7 @@ server.ssl.key-store=classpath:keystore/bootsecurity.p12
 server.ssl.key-store-password=password
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=bootsecurity
+
+eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://localhost:9999/eureka}
+eureka.client.instance.preferIpAddress = true
+spring.application.name = card-api
