--- a/card-api/src/main/resources/application-dev.properties
+++ b/card-api/src/main/resources/application-dev.properties
@@ -7,3 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 server.port=8225
+
+eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://localhost:9999/eureka}
+eureka.client.instance.preferIpAddress = true
+spring.application.name = card-api
