--- a/card-api/src/main/resources/application-mysql.properties
+++ b/card-api/src/main/resources/application-mysql.properties
@@ -1,23 +1,13 @@
-#spring.datasource.url=jdbc:mysql://mysql:3307/bank
-#spring.datasource.username=root
-#spring.datasource.password=root
-#
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.generate-ddl=true
-#spring.jpa.show-sql=true
-#server.port=8225
+spring.datasource.url=jdbc:mysql://mysql:3307/bank
+spring.datasource.username=root
+spring.datasource.password=root
 
-spring.datasource.url=jdbc:h2:file:../data/demo;AUTO_SERVER=true
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.h2.console.settings.web-allow-others=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 server.port=8225
+
+eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://gateway:9999/eureka}
+eureka.client.instance.preferIpAddress = true
+spring.application.name = card-api
