--- a/card-api/src/main/resources/application.properties
+++ b/card-api/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.profiles.active=@spring.profiles.active@
 #server.ssl.key-store-password=bootsecurity
 #server.ssl.keyStoreType=PKCS12
 #server.ssl.keyAlias=bootsecurity
+
+eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://localhost:9999/eureka}
+eureka.client.instance.preferIpAddress = true
+spring.application.name = card-api
