--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
         <groupId>org.springframework.boot</groupId>
-        <version>2.5.2</version>
+        <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ss.eastcoderbank</groupId>
@@ -19,7 +19,7 @@
     <name>cardservice</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <maven.compiler.soruce>11</maven.compiler.soruce>
+        <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <profiles>
