--- a/card-api/src/main/resources/application-mysql.properties
+++ b/card-api/src/main/resources/application-mysql.properties
@@ -8,6 +8,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 server.port=8225
 
+# Address for DOCKER USE
 eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://gateway:9999/eureka}
 eureka.client.instance.preferIpAddress = true
 spring.application.name = card-api
