--- a/card-api/src/main/resources/application-h2.properties
+++ b/card-api/src/main/resources/application-h2.properties
@@ -12,6 +12,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 server.port=8225
 
+logging.level.root=OFF
 eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://localhost:9999/eureka}
 eureka.client.instance.preferIpAddress = true
 spring.application.name = card-api
