finalized stack template

--- a/deploystack.yaml
+++ b/deploystack.yaml
@@ -1,5 +1,5 @@
-AWSTemplateFormatVersion: "2010-09-09"
-Description: "Deploy a service"
+AWSTemplateFormatVersion: 2010-09-09
+Description: card service stack
 Parameters:
   AppEnv:
     Type: String
@@ -7,23 +7,26 @@ Parameters:
     Description: The environment profile the app will be deployed in
   AppName:
     Type: String
-    Default: SSEastCoders
+    Default: card-service
     Description: The application name
   ServiceName:
     Type: String
+    Default: dev-card-service
     Description: The service name
   ServicePort:
     Type: Number
     Description: The service port number
+  HealthPath:
+    Type: String
+    Description: Path for health check
+    Default: /credit-cards/health
 Resources:
-
-  # MicroService
   MicroService:
-    Type: AWS::ECS::Service
-    DependsOn: DevListener
+    Type: 'AWS::ECS::Service'
+    DependsOn: CardListener
     Properties:
-      ServiceName: !Sub '${AppName}-${AppEnv}-${ServiceName}'
-      Cluster: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/resources:SecretString:ClusterName}}'
+      ServiceName: !Ref ServiceName
+      Cluster: !Sub '{{resolve:secretsmanager:ClusterName:SecretString}}'
       TaskDefinition: !Ref ServiceTask
       DeploymentConfiguration:
         MinimumHealthyPercent: 100
@@ -34,90 +37,72 @@ Resources:
         AwsvpcConfiguration:
           AssignPublicIp: ENABLED
           Subnets:
-            - !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/resources:SecretString:PrivateSubnet}}'
+            - !Sub '{{resolve:secretsmanager:PrivateSubnet:SecretString}}'
           SecurityGroups:
-            - !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/resources:SecretString:SecurityGroup}}'
+            - !Sub '{{resolve:secretsmanager:SecurityGroup:SecretString}}'
       LoadBalancers:
-        - ContainerName: !Sub '${AppName}-${AppEnv}-${ServiceName}'
+        - ContainerName: !Ref ServiceName
           ContainerPort: !Ref ServicePort
           TargetGroupArn: !Ref ServiceTargetGroup
-
-
-  # Task Definition for the MicroService
   ServiceTask:
-    Type: AWS::ECS::TaskDefinition
+    Type: 'AWS::ECS::TaskDefinition'
     Properties:
-      Family: !Sub ${AppName}-${AppEnv}
       RequiresCompatibilities:
         - FARGATE
       Memory: 2048
       Cpu: 512
       NetworkMode: awsvpc
-      ExecutionRoleArn: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/resources:SecretString:TaskExecutionRole}}'
-      TaskRoleArn: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/resources:SecretString:ContainerExecutionRole}}'
+      ExecutionRoleArn: !Sub '{{resolve:secretsmanager:TaskExecutionRole:SecretString}}'
+      TaskRoleArn: !Sub '{{resolve:secretsmanager:TaskExecutionRole:SecretString}}'
       ContainerDefinitions:
-        - Name: !Sub ${AppName}-${AppEnv}-${ServiceName}
-          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${AppName}/${AppEnv}/${ServiceName}:latest'
+        - Name: !Ref ServiceName
+          Image: !Sub >-
+            ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ServiceName}:latest
           PortMappings:
             - ContainerPort: !Ref ServicePort
           Environment:
-            - Name: APP_PORT
-              Value: !Ref ServicePort
-            - Name: APP_USER_ACCESS_KEY
-              Value: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/user-credentials:SecretString:ACCESS_KEY}}'
-            - Name: APP_USER_SECRET_KEY
-              Value: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/user-credentials:SecretString:SECRET_KEY}}'
-            - Name: ENCRYPT_SECRET_KEY
-              Value: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/user-credentials:SecretString:EncryptKey}}'
-            - Name: JWT_SECRET_KEY
-              Value: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/jewt/key}}'
-            - Name: PORTAL_LANDING
-              Value: http://eastcoder.com
-            - Name: PORTAL_DASHBOARD
-              Value: http://dashboard.eastcoder.com
-            - Name: PORTAL_ADMIN
-              Value: http://admin.eastcoder.com
-            - Name: DB_USERNAME
-              Value: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/db:SecretString:Username}}'
-            - Name: DB_PASSWORD
-              Value: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/db:SecretString:Password}}'
-            - Name: DB_HOST
-              Value: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/db:SecretString:Address}}'
-            - Name: DB_PORT
-              Value: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/db:SecretString:Port}}'
-            - Name: DB_NAME
-              Value: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/db:SecretString:Database}}'
+            - Name: TWILIO_SID
+              Value: >-
+                {{resolve:secretsmanager:twilio/sid_token:SecretString:TWILIO_SID}}
+            - Name: TWILIO_TOKEN
+              Value: >-
+                {{resolve:secretsmanager:twilio/sid_token:SecretString:TWILIO_TOKEN}}
+            - Name: JWT_SECRET
+              Value: '{{resolve:secretsmanager:jwt/key:SecretString:JWT_SECRET}}'
+            - Name: DB_USER
+              Value: >-
+                {{resolve:secretsmanager:rds/eastcoders-db/login:SecretString:username}}
+            - Name: DB_PASS
+              Value: >-
+                {{resolve:secretsmanager:rds/eastcoders-db/login:SecretString:password}}
           Essential: true
           Memory: 2048
           LogConfiguration:
             LogDriver: awslogs
             Options:
-              awslogs-group: !Sub ${AppName}/${AppEnv}/${ServiceName}
-              awslogs-region: !Ref AWS::Region
-              awslogs-stream-prefix: !Sub ${ServiceName}-${AppEnv}
+              awslogs-group: !Sub '${AppName}/${AppEnv}/${ServiceName}'
+              awslogs-region: !Ref 'AWS::Region'
+              awslogs-stream-prefix: !Sub '${ServiceName}-${AppEnv}'
               awslogs-create-group: 'true'
-
-  # The TargetGroup for the MicroService
   ServiceTargetGroup:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
     Properties:
       Port: !Ref ServicePort
       HealthCheckIntervalSeconds: 60
-      HealthCheckPath: '/health'
+      HealthCheckPath: !Ref HealthPath
       HealthCheckTimeoutSeconds: 5
-      HealthCheckPort: !Ref ServicePort
       Protocol: HTTP
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
           Value: '60'
       TargetType: ip
-      VpcId: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/resources:SecretString:Vpc}}'
-
-  # API Listener
-  ApiListener:
-    Type: AWS::ElasticLoadBalancingV2::Listener
+      Matcher:
+        HttpCode: '200,401'
+      VpcId: !Sub '{{resolve:secretsmanager:Vpc:SecretString}}'
+  CardListener:
+    Type: 'AWS::ElasticLoadBalancingV2::Listener'
     Properties:
-      LoadBalancerArn: !Sub '{{resolve:secretsmanager:${AppName}/${AppEnv}/secrets/resources:SecretString:LoadBalancer}}'
+      LoadBalancerArn: !Sub '{{resolve:secretsmanager:LoadBalancer:SecretString}}'
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref ServiceTargetGroup
