--- a/card-api/src/main/resources/application-h2.properties
+++ b/card-api/src/main/resources/application-h2.properties
@@ -10,13 +10,12 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-<<<<<<< HEAD
-server.port=8125
-=======
 server.port=8225
->>>>>>> 04d30800352670a37b6269f9ec253e4cd6361d31
 
 logging.level.root=OFF
 eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://localhost:9999/eureka}
 eureka.client.instance.preferIpAddress = true
 spring.application.name = card-api
+
+#log configs
+logging.level.card-api=TRACE
