--- a/card-api/src/main/resources/application-mysql.properties
+++ b/card-api/src/main/resources/application-mysql.properties
@@ -12,3 +12,6 @@ server.port=8225
 eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://gateway:9999/eureka}
 eureka.client.instance.preferIpAddress = true
 spring.application.name = card-api
+
+#log configs
+logging.level.card-api=TRACE
