--- a/card-api/src/main/resources/application-prod.properties
+++ b/card-api/src/main/resources/application-prod.properties
@@ -14,3 +14,6 @@ server.ssl.keyAlias=bootsecurity
 eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://localhost:9999/eureka}
 eureka.client.instance.preferIpAddress = true
 spring.application.name = card-api
+
+#log configs
+logging.level.card-api=WARN
