--- a/card-api/src/main/resources/application.properties
+++ b/card-api/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.profiles.active=@spring.profiles.active@
 eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://localhost:9999/eureka}
 eureka.client.instance.preferIpAddress = true
 spring.application.name = card-api
+
+#log configs
+logging.file.name=card-api.log
+
+logging.logback.rollingpolicy.max-file-size=100MB
+logging.logback.rollingpolicy.max-history=7
+
+#logging pattern for file
+logging.pattern.file=%date{ISO8601} %-5level %class{0}:%L - [%X] %msg%n
