--- a/card-api/src/main/resources/application.properties
+++ b/card-api/src/main/resources/application.properties
@@ -19,3 +19,13 @@ logging.logback.rollingpolicy.max-history=7
 
 #logging pattern for file
 logging.pattern.file=%date{ISO8601} %-5level %class{0}:%L - [%X] %msg%n
+
+# The location of Atlas server
+management.metrics.export.atlas.uri=http://localhost:7101/api/v1/publish
+management.metrics.export.atlas.enabled=true # default is true
+# The interval at which metrics are sent to Atlas. See Duration.parse for the expected format.
+# The default is 1 minute.
+management.metrics.export.atlas.step=PT1M
+
+management.metrics.export.cloudwatch.namespace=eastcoderBank
+management.metrics.export.cloudwatch.batchSize=20
