--- a/card-api/src/main/resources/application.properties
+++ b/card-api/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.profiles.active=@spring.profiles.active@
 #server.ssl.keyStoreType=PKCS12
 #server.ssl.keyAlias=bootsecurity
 
-eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://localhost:9999/eureka}
-eureka.client.instance.preferIpAddress = true
-spring.application.name = card-api
+#eureka.client.serviceUrl.defaultZone  = ${EUREKA_URL:http://localhost:9999/eureka}
+#eureka.client.instance.preferIpAddress = true
+#spring.application.name = card-api
+spring.cloud.discovery.enabled = false
